feat: multiple runtimes, create package, rework core concepts
BREAKING CHANGE: The core concepts of Pylon have been reworked to
 provide a more flexible and unified development experience. The
 following changes have been made:

- New Runtimes: Pylon now supports multiple runtimes, including Bun,
 Node.js, and Cloudflare Workers.
- Unified Create Command: The new npm create pylon command provides
 a consistent way to create new Pylon projects.
- Improved Development Server: The new pylon dev command provides a
 unified development experience across different runtimes.
 Drop of pylon-cli and pylon-server: The @getcronit/pylon-cli and
 @getcronit/pylon-server packages are no longer required and replaced by
 the @getcronit/pylon-dev package.

--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "private": true,
   "workspaces": {
     "packages": [
-      "packages/*"
+      "packages/*",
+      "pylon-template"
     ]
   },
   "scripts": {
-    "build": "bun run --filter ./packages/pylon build && bun run --filter ./packages/pylon-builder build && bun run --filter ./packages/pylon-server build && bun run --filter ./packages/pylon-cli build"
+    "build": "bun run --filter ./packages/pylon-builder build && bun run --filter ./packages/pylon build &&  bun run --filter ./packages/pylon-dev build && bun run --filter ./packages/create-pylon build"
   },
   "devDependencies": {
     "@semantic-release/changelog": "^6.0.3",
