--- a/packages/pylon-builder/package.json
+++ b/packages/pylon-builder/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@getcronit/pylon-builder",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -11,11 +11,22 @@
   "files": [
     "dist"
   ],
-  "license": "UNLICENSED",
+  "author": "Nico Schett <nico.schett@cronit.io>",
+  "license": "Apache-2.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/getcronit/pylon.git",
+    "directory": "packages/pylon-builder"
+  },
+  "homepage": "https://pylon.cronit.io",
   "dependencies": {
     "chokidar": "^3.5.3",
+    "consola": "^3.2.3",
     "source-map-support": "^0.5.21",
     "typescript": "^4.9.5"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "esbuild": "^0.23.1",
+    "esbuild-plugin-tsc": "^0.4.0"
+  }
 }
