--- a/packages/pylon/package.json
+++ b/packages/pylon/package.json
@@ -1,18 +1,25 @@
 {
   "name": "@getcronit/pylon",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "bun build ./src/index.ts --target=bun --outdir=./dist --sourcemap=external --packages external && bun run build:declarations",
+    "build": "rimraf ./dist && bun build ./src/index.ts --target=bun --outdir=./dist --sourcemap=external --packages external && bun run build:declarations",
     "build:declarations": "tsc --declaration --emitDeclarationOnly --outDir ./dist"
   },
   "files": [
     "dist",
     "tsconfig.pylon.json"
   ],
-  "license": "UNLICENSED",
+  "author": "Nico Schett <nico.schett@cronit.io>",
+  "license": "Apache-2.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/getcronit/pylon.git",
+    "directory": "packages/pylon"
+  },
+  "homepage": "https://pylon.cronit.io",
   "devDependencies": {
     "hono": "^4.0.8"
   },
@@ -21,7 +28,9 @@
     "@sentry/bun": "^8.17.0"
   },
   "dependencies": {
+    "@hono/sentry": "^1.2.0",
     "graphql": "^16.9.0",
+    "graphql-yoga": "^5.6.2",
     "jsonwebtoken": "^9.0.2",
     "openid-client": "^5.6.4",
     "winston": "^3.8.2"
