--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "private": true,
   "workspaces": {
     "packages": [
-      "packages/*",
-      "pylon-template"
+      "packages/*"
     ]
   },
   "scripts": {
