fix: update dependencies for v2

--- a/packages/create-pylon/templates/cf-workers/default/package.json
+++ b/packages/create-pylon/templates/cf-workers/default/package.json
@@ -8,10 +8,10 @@
     "cf-typegen": "wrangler types"
   },
   "dependencies": {
-    "@getcronit/pylon": "*"
+    "@getcronit/pylon": "^2.0.0"
   },
   "devDependencies": {
-    "@getcronit/pylon-dev": "*",
+    "@getcronit/pylon-dev": "^1.0.0",
     "@cloudflare/vitest-pool-workers": "^0.4.5",
     "@cloudflare/workers-types": "^4.20240903.0",
     "typescript": "^5.5.2",
