--- a/packages/create-pylon/templates/bun/default/package.json
+++ b/packages/create-pylon/templates/bun/default/package.json
@@ -9,11 +9,11 @@
     "build": "pylon build"
   },
   "dependencies": {
-    "@getcronit/pylon": "*",
+    "@getcronit/pylon": "^2.0.0",
     "bun-types": "^1.1.18"
   },
   "devDependencies": {
-    "@getcronit/pylon-dev": "*"
+    "@getcronit/pylon-dev": "^1.0.0"
   },
   "repository": {
     "type": "git",
