--- a/packages/create-pylon/package.json
+++ b/packages/create-pylon/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://pylon.cronit.io",
   "dependencies": {
     "@inquirer/prompts": "^5.4.0",
+    "chalk": "^5.3.0",
     "commander": "^12.1.0",
     "consola": "^3.2.3",
     "detect-package-manager": "^3.0.2"
