--- a/packages/pylon-builder/package.json
+++ b/packages/pylon-builder/package.json
@@ -26,5 +26,8 @@
     "typescript": "^4.9.5",
     "esbuild": "^0.23.1",
     "esbuild-plugin-tsc": "^0.4.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
