--- a/packages/create-pylon/package.json
+++ b/packages/create-pylon/package.json
@@ -25,5 +25,8 @@
     "commander": "^12.1.0",
     "consola": "^3.2.3",
     "detect-package-manager": "^3.0.2"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
