--- a/packages/create-pylon/templates/node/default/package.json
+++ b/packages/create-pylon/templates/node/default/package.json
@@ -9,7 +9,8 @@
     "build": "pylon build"
   },
   "dependencies": {
-    "@getcronit/pylon": "^2.0.0"
+    "@getcronit/pylon": "^2.0.0",
+    "@hono/node-server": "^1.12.2"
   },
   "devDependencies": {
     "@getcronit/pylon-dev": "^1.0.0"
