--- a/packages/pylon/package.json
+++ b/packages/pylon/package.json
@@ -20,18 +20,16 @@
     "directory": "packages/pylon"
   },
   "homepage": "https://pylon.cronit.io",
-  "devDependencies": {
-    "hono": "^4.0.8"
-  },
   "dependencies": {
     "@hono/sentry": "^1.2.0",
+    "@sentry/bun": "^8.17.0",
+    "consola": "^3.2.3",
     "graphql": "^16.9.0",
     "graphql-yoga": "^5.6.2",
+    "hono": "^4.0.8",
     "jsonwebtoken": "^9.0.2",
     "openid-client": "^5.6.4",
-    "winston": "^3.8.2",
-    "hono": "^4.0.8",
-    "@sentry/bun": "^8.17.0"
+    "winston": "^3.8.2"
   },
   "resolutions": {
     "graphql": "^16.9.0"
