--- a/packages/pylon/package.json
+++ b/packages/pylon/package.json
@@ -29,7 +29,8 @@
     "hono": "^4.0.8",
     "jsonwebtoken": "^9.0.2",
     "openid-client": "^5.6.4",
-    "winston": "^3.8.2"
+    "winston": "^3.8.2",
+    "@getcronit/pylon-telemetry": "^1.0.0"
   },
   "resolutions": {
     "graphql": "^16.9.0"
