--- a/packages/pylon/package.json
+++ b/packages/pylon/package.json
@@ -30,7 +30,7 @@
     "jsonwebtoken": "^9.0.2",
     "openid-client": "^5.6.4",
     "winston": "^3.8.2",
-    "@getcronit/pylon-telemetry": "^1.0.0"
+    "@getcronit/pylon-telemetry": "beta"
   },
   "resolutions": {
     "graphql": "^16.9.0"
