--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "private": true,
   "workspaces": {
     "packages": [
-      "packages/*"
+      "/packages/pylon-telemetry",
+      "packages/*",
+      "my-pylon"
     ]
   },
   "scripts": {
