--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "private": true,
   "workspaces": {
     "packages": [
-      "/packages/pylon-telemetry",
-      "packages/*",
-      "my-pylon"
+      "packages/pylon-telemetry",
+      "packages/*"
     ]
   },
   "scripts": {
