fix: add compiler options for decorators

--- a/packages/pylon/tsconfig.pylon.json
+++ b/packages/pylon/tsconfig.pylon.json
@@ -17,6 +17,8 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
-    "experimentalDecorators": true
+    "experimentalDecorators": true,
+    "useDefineForClassFields": false,
+    "emitDecoratorMetadata": true
   }
 }
