chore(examples): add cloudflare-drizzle-d1

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "workspaces": {
     "packages": [
       "packages/pylon-telemetry",
-      "packages/*"
+      "packages/*",
+      "examples/*"
     ]
   },
   "scripts": {
