fix: support module agumentation
- Support module agumentation for the `Bindings` and `Variables` interfaces
- Add `pylon.d.ts` to the `shared` template
- Add `pylon.d.ts` to the `tsconfig.json` of the templates
- Use module agumentation for the `cloudflare-drizzle-d1` template

ref: https://www.typescriptlang.org/docs/handbook/declaration-merging.html

Closes #25

--- a/examples/cloudflare-drizzle-d1/tsconfig.json
+++ b/examples/cloudflare-drizzle-d1/tsconfig.json
@@ -1,4 +1,4 @@
 {
   "extends": "@getcronit/pylon/tsconfig.pylon.json",
-  "include": ["worker-configuration.d.ts", "src/**/*.ts"]
+  "include": ["pylon.d.ts", "worker-configuration.d.ts", "src/**/*.ts"]
 }
