--- a/packages/create-pylon/templates/bun/default/tsconfig.json
+++ b/packages/create-pylon/templates/bun/default/tsconfig.json
@@ -3,5 +3,6 @@
   "compilerOptions": {
     // add Bun type definitions
     "types": ["bun-types"]
-  }
+  },
+  "include": ["pylon.d.ts", "src/**/*.ts"]
 }
