--- a/packages/create-pylon/templates/cf-workers/default/tsconfig.json
+++ b/packages/create-pylon/templates/cf-workers/default/tsconfig.json
@@ -1,4 +1,4 @@
 {
   "extends": "@getcronit/pylon/tsconfig.pylon.json",
-  "include": ["worker-configuration.d.ts", "src/**/*.ts"]
+  "include": ["pylon.d.ts", "worker-configuration.d.ts", "src/**/*.ts"]
 }
