--- a/packages/pylon-builder/package.json
+++ b/packages/pylon-builder/package.json
@@ -22,10 +22,11 @@
   "dependencies": {
     "chokidar": "^3.5.3",
     "consola": "^3.2.3",
-    "source-map-support": "^0.5.21",
-    "typescript": "^5.0.0",
     "esbuild": "^0.23.1",
-    "esbuild-plugin-tsc": "^0.4.0"
+    "esbuild-plugin-tsc": "^0.4.0",
+    "rimraf": "^6.0.1",
+    "source-map-support": "^0.5.21",
+    "typescript": "^5.0.0"
   },
   "engines": {
     "node": ">=18.0.0"
