--- a/packages/create-pylon/templates/bun/default/package.json
+++ b/packages/create-pylon/templates/bun/default/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "description": "Generated with `npm create pylon`",
   "scripts": {
-    "dev": "pylon dev -c 'bun run .pylon/index.js'",
+    "dev": "pylon dev -c \"bun run .pylon/index.js\"",
     "build": "pylon build"
   },
   "dependencies": {
