--- a/packages/create-pylon/templates/cf-workers/default/package.json
+++ b/packages/create-pylon/templates/cf-workers/default/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "deploy": "pylon build && wrangler deploy",
-    "dev": "pylon dev -c 'wrangler dev'",
+    "dev": "pylon dev -c \"wrangler dev\"",
     "cf-typegen": "wrangler types"
   },
   "dependencies": {
