ci: add acceptance workflow for generating public fork PR previews

--- a/.github/workflows/vercel-pull-request.yml
+++ b/.github/workflows/vercel-pull-request.yml
@@ -1,9 +1,11 @@
 # vercel-pull-request.yml
 name: Create vercel preview URL on pull request
 on:
-  pull_request:
-    branches:
-      - main
+  workflow_run:
+    workflows:
+      - acceptance
+    types:
+      - completed
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
