--- a/docs/package.json
+++ b/docs/package.json
@@ -25,6 +25,7 @@
     "@vercel/analytics": "^1.3.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.440.0",
     "next": "^13.0.6",
     "nextra": "latest",
