--- a/packages/pylon/package.json
+++ b/packages/pylon/package.json
@@ -21,16 +21,17 @@
   },
   "homepage": "https://pylon.cronit.io",
   "dependencies": {
+    "@getcronit/pylon-telemetry": "^1.0.0",
     "@hono/sentry": "^1.2.0",
     "@sentry/bun": "^8.17.0",
     "consola": "^3.2.3",
     "graphql": "^16.9.0",
+    "graphql-scalars": "^1.24.0",
     "graphql-yoga": "^5.6.2",
     "hono": "^4.0.8",
     "jsonwebtoken": "^9.0.2",
     "openid-client": "^5.6.4",
-    "winston": "^3.8.2",
-    "@getcronit/pylon-telemetry": "^1.0.0"
+    "winston": "^3.8.2"
   },
   "resolutions": {
     "graphql": "^16.9.0"
