--- a/packages/create-pylon/package.json
+++ b/packages/create-pylon/package.json
@@ -20,11 +20,12 @@
   },
   "homepage": "https://pylon.cronit.io",
   "dependencies": {
+    "@getcronit/pylon-telemetry": "^1.0.0",
     "@inquirer/prompts": "^5.4.0",
     "chalk": "^5.3.0",
     "commander": "^12.1.0",
     "consola": "^3.2.3",
-    "@getcronit/pylon-telemetry": "^1.0.0"
+    "hono": "^4"
   },
   "engines": {
     "node": ">=18.0.0"
