ci(workflows): restrict Vercel workflows to trigger on changes in the docs directory

--- a/.github/workflows/vercel-pull-request.yml
+++ b/.github/workflows/vercel-pull-request.yml
@@ -5,6 +5,8 @@ on:
     types: [labeled]
     branches:
       - main
+    paths:
+      - 'docs/**'
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
