--- a/packages/create-pylon/package.json
+++ b/packages/create-pylon/package.json
@@ -1,10 +1,10 @@
 {
   "name": "create-pylon",
   "type": "module",
-  "version": "1.0.0",
+  "version": "1.1.1",
   "description": "CLI for creating a Pylon",
   "scripts": {
-    "build": "bun build ./src/index.ts --target=bun --outdir=./dist --sourcemap=inline --packages external"
+    "build": "rimraf ./dist && esbuild ./src/index.ts --bundle --platform=node --target=node18 --format=esm --minify --outdir=./dist --sourcemap=inline --packages=external"
   },
   "bin": "./dist/index.js",
   "files": [
@@ -20,7 +20,7 @@
   },
   "homepage": "https://pylon.cronit.io",
   "dependencies": {
-    "@getcronit/pylon-telemetry": "^1.0.0",
+    "@getcronit/pylon-telemetry": "workspace:^",
     "@inquirer/prompts": "^5.4.0",
     "chalk": "^5.3.0",
     "commander": "^12.1.0",
