--- a/packages/pylon-telemetry/package.json
+++ b/packages/pylon-telemetry/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@getcronit/pylon-telemetry",
   "type": "module",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "description": "Telemetry for Pylon",
   "scripts": {
-    "build": "rimraf ./dist && bun build ./src/index.ts --target=bun --outdir=./dist --sourcemap=external --packages external && bun run build:declarations",
+    "build": "rimraf ./dist && esbuild ./src/index.ts --bundle --platform=node --target=node18 --format=esm --minify --outdir=./dist --sourcemap=inline --packages=external && pnpm run build:declarations",
     "build:declarations": "tsc --declaration --emitDeclarationOnly --outDir ./dist"
-  },
+   },
   "files": [
     "dist"
   ],
