chore: add .changeset folder and ignore examples

--- a/examples/cloudflare-drizzle-d1/package.json
+++ b/examples/cloudflare-drizzle-d1/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cloudflare-drizzle-d1",
+  "name": "example-cloudflare-drizzle-d1",
   "version": "0.0.0",
   "private": true,
   "scripts": {
