--- a/examples/graphql-resolve-info/package.json
+++ b/examples/graphql-resolve-info/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "graphql-resolve-info",
+  "name": "example-graphql-resolve-info",
   "private": true,
   "version": "0.0.1",
   "type": "module",
