--- a/examples/interfaces-and-unions/package.json
+++ b/examples/interfaces-and-unions/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "interfaces-and-unions",
+  "name": "example-interfaces-and-unions",
   "private": true,
   "version": "0.0.1",
   "type": "module",
