--- a/examples/envelop-plugins/package.json
+++ b/examples/envelop-plugins/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "envelop-plugins",
+  "name": "example-envelop-plugins",
   "private": true,
   "version": "0.0.1",
   "type": "module",
