--- a/examples/nodejs-subscriptions/package.json
+++ b/examples/nodejs-subscriptions/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nodejs-subscriptions",
+  "name": "example-nodejs-subscriptions",
   "private": true,
   "version": "0.0.1",
   "type": "module",
