--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "build": "pnpm -r --filter \"./packages/*\" run build"
   },
   "devDependencies": {
+    "@changesets/changelog-github": "^0.5.0",
+    "@changesets/cli": "^2.27.12",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/commit-analyzer": "^13.0.0",
     "@semantic-release/release-notes-generator": "^14.0.0",
