--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://unpkg.com/@changesets/config@3.0.5/schema.json",
-  "changelog": ["@changesets/changelog-github", { "repo": "schettn/semantic-release-tests" }],
+  "changelog": ["@changesets/changelog-github", { "repo": "getcronit/pylon" }],
   "commit": false,
   "linked": [],
   "access": "public",
