chore: update build scripts to use linked sourcemaps

--- a/packages/create-pylon/package.json
+++ b/packages/create-pylon/package.json
@@ -4,7 +4,7 @@
   "version": "1.1.1",
   "description": "CLI for creating a Pylon",
   "scripts": {
-    "build": "rimraf ./dist && esbuild ./src/index.ts --bundle --platform=node --target=node18 --format=esm --minify --outdir=./dist --sourcemap=inline --packages=external"
+    "build": "rimraf ./dist && esbuild ./src/index.ts --bundle --platform=node --target=node18 --format=esm --minify --outdir=./dist --sourcemap=linked --packages=external"
   },
   "bin": "./dist/index.js",
   "files": [
