--- a/packages/pylon/package.json
+++ b/packages/pylon/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@getcronit/pylon",
-  "version": "2.0.0",
+  "version": "2.9.2",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "rimraf ./dist && bun build ./src/index.ts --target=bun --outdir=./dist --sourcemap=external --packages external && bun run build:declarations",
+    "build": "rimraf ./dist && esbuild ./src/index.ts --bundle --platform=node --target=node18 --format=esm --outdir=./dist --sourcemap=linked --packages=external && pnpm run build:declarations",
     "build:declarations": "tsc --declaration --emitDeclarationOnly --outDir ./dist"
   },
   "files": [
@@ -21,9 +21,11 @@
   },
   "homepage": "https://pylon.cronit.io",
   "dependencies": {
-    "@getcronit/pylon-telemetry": "^1.0.0",
+    "@envelop/core": "^5.0.3",
+    "@getcronit/pylon-telemetry": "workspace:^",
     "@hono/sentry": "^1.2.0",
     "@sentry/bun": "^8.17.0",
+    "@sentry/node": "^8.54.0",
     "consola": "^3.2.3",
     "graphql": "^16.9.0",
     "graphql-scalars": "^1.24.0",
@@ -31,12 +33,13 @@
     "hono": "^4.0.8",
     "jsonwebtoken": "^9.0.2",
     "openid-client": "^5.6.4",
+    "toucan-js": "^4.1.0",
     "winston": "^3.8.2"
-  },
-  "resolutions": {
-    "graphql": "^16.9.0"
   },
   "engines": {
     "node": ">=18.0.0"
+  },
+  "devDependencies": {
+    "@sentry/types": "^8.54.0"
   }
 }
