fix(dependencies): update pylon and pylon-dev dependencies to use workspace protocol

--- a/examples/cloudflare-drizzle-d1/package.json
+++ b/examples/cloudflare-drizzle-d1/package.json
@@ -10,13 +10,13 @@
     "migrate": "drizzle-kit migrate"
   },
   "dependencies": {
-    "@getcronit/pylon": "^2.0.0",
+    "@getcronit/pylon": "workspace:^",
     "drizzle-orm": "^0.33.0"
   },
   "devDependencies": {
     "@cloudflare/vitest-pool-workers": "^0.4.5",
     "@cloudflare/workers-types": "^4.20240903.0",
-    "@getcronit/pylon-dev": "^1.0.0",
+    "@getcronit/pylon-dev": "workspace:^",
     "drizzle-kit": "^0.24.2",
     "typescript": "^5.5.2",
     "wrangler": "^3.60.3"
