--- a/examples/envelop-plugins/package.json
+++ b/examples/envelop-plugins/package.json
@@ -9,11 +9,11 @@
     "build": "pylon build"
   },
   "dependencies": {
-    "@getcronit/pylon": "^2.0.0",
+    "@getcronit/pylon": "workspace:^",
     "bun-types": "^1.1.18"
   },
   "devDependencies": {
-    "@getcronit/pylon-dev": "^1.0.0"
+    "@getcronit/pylon-dev": "workspace:^"
   },
   "repository": {
     "type": "git",
