--- a/examples/graphql-resolve-info/package.json
+++ b/examples/graphql-resolve-info/package.json
@@ -9,12 +9,12 @@
     "build": "pylon build"
   },
   "dependencies": {
-    "@getcronit/pylon": "^2.0.0",
+    "@getcronit/pylon": "workspace:^",
     "bun-types": "^1.1.18",
     "graphql-parse-resolve-info": "^4.13.0"
   },
   "devDependencies": {
-    "@getcronit/pylon-dev": "^1.0.0"
+    "@getcronit/pylon-dev": "workspace:^"
   },
   "repository": {
     "type": "git",
