--- a/examples/nodejs-subscriptions/package.json
+++ b/examples/nodejs-subscriptions/package.json
@@ -9,11 +9,11 @@
     "build": "pylon build"
   },
   "dependencies": {
-    "@getcronit/pylon": "^2.0.0",
+    "@getcronit/pylon": "workspace:^",
     "@hono/node-server": "^1.12.2"
   },
   "devDependencies": {
-    "@getcronit/pylon-dev": "^1.0.0"
+    "@getcronit/pylon-dev": "workspace:^"
   },
   "repository": {
     "type": "git",
