--- a/examples/fullstack/package.json
+++ b/examples/fullstack/package.json
@@ -14,6 +14,7 @@
         "@radix-ui/react-slot": "^1.1.1",
         "@radix-ui/react-tabs": "^1.1.2",
         "autoprefixer": "^10.4.20",
+        "browser-or-node": "^3.0.0",
         "bun-types": "^1.1.18",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
