--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "changeset": "changeset --",
-    "ci:release": "pnpm run build && changeset publish",
+    "ci:release": "changeset publish",
     "ci:version": "changeset version && pnpm i --no-frozen-lockfile --lockfile-only --ignore-scripts",
     "clean": "pnpm -r --filter \"./packages/*\" exec -- rimraf dist",
     "build": "pnpm -r --filter \"./packages/*\" run build"
