--- a/packages/pylon/package.json
+++ b/packages/pylon/package.json
@@ -23,16 +23,21 @@
   "dependencies": {
     "@envelop/core": "^5.0.3",
     "@getcronit/pylon-telemetry": "workspace:^",
+    "@gqty/react": "^3.1.0",
     "@hono/sentry": "^1.2.0",
     "@sentry/bun": "^8.17.0",
     "@sentry/node": "^8.54.0",
     "consola": "^3.2.3",
+    "gqty": "3.4.0-canary-20250207102900.644ad9fdeafa6318516627577b1d4d754d5c5a98",
     "graphql": "^16.9.0",
     "graphql-scalars": "^1.24.0",
     "graphql-yoga": "^5.6.2",
     "hono": "^4.0.8",
     "jsonwebtoken": "^9.0.2",
     "openid-client": "^6.1.7",
+    "react-router": "^7.1.5",
+    "sharp": "^0.33.5",
+    "tiny-glob": "^0.2.9",
     "toucan-js": "^4.1.0",
     "winston": "^3.8.2"
   },
@@ -40,6 +45,28 @@
     "node": ">=18.0.0"
   },
   "devDependencies": {
-    "@sentry/types": "^8.54.0"
+    "@sentry/types": "^8.54.0",
+    "postcss-load-config": "^6.0.1"
+  },
+  "peerDependencies": {
+    "@tailwindcss/postcss": "^4.0.4",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
+  },
+  "peerDependenciesMeta": {
+    "react": {
+      "optional": true
+    },
+    "react-dom": {
+      "optional": true
+    },
+    "@tailwindcss/postcss": {
+      "optional": true
+    },
+    "autoprefixer": {
+      "optional": true
+    }
   }
 }
