add chokidar as a dev dependency

--- a/packages/pylon/package.json
+++ b/packages/pylon/package.json
@@ -46,6 +46,7 @@
   },
   "devDependencies": {
     "@sentry/types": "^8.54.0",
+    "chokidar": "^4.0.3",
     "postcss-load-config": "^6.0.1"
   },
   "peerDependencies": {
