add chokidar and postcss-load-config as dependencies in package.json

--- a/packages/pylon/package.json
+++ b/packages/pylon/package.json
@@ -39,15 +39,15 @@
     "sharp": "^0.33.5",
     "tiny-glob": "^0.2.9",
     "toucan-js": "^4.1.0",
-    "winston": "^3.8.2"
+    "winston": "^3.8.2",
+    "postcss-load-config": "^6.0.1",
+    "chokidar": "^4.0.3"
   },
   "engines": {
     "node": ">=18.0.0"
   },
   "devDependencies": {
-    "@sentry/types": "^8.54.0",
-    "chokidar": "^4.0.3",
-    "postcss-load-config": "^6.0.1"
+    "@sentry/types": "^8.54.0"
   },
   "peerDependencies": {
     "@tailwindcss/postcss": "^4.0.4",
