--- a/packages/create-pylon/templates/bun/pages/package.json
+++ b/packages/create-pylon/templates/bun/pages/package.json
@@ -23,7 +23,8 @@
   },
   "devDependencies": {
     "@getcronit/pylon-dev": "canary",
-    "@types/react": "^19.0.8"
+    "@types/react": "^19.0.8",
+    "@tailwindcss/postcss": "^4.0.6"
   },
   "repository": {
     "type": "git",
