add @gqty/react and gqty as dependencies in package.json

--- a/packages/create-pylon/templates/bun/pages/package.json
+++ b/packages/create-pylon/templates/bun/pages/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@getcronit/pylon": "canary",
+    "@gqty/react": "^3.1.0",
     "@radix-ui/react-slot": "^1.1.2",
     "bun-types": "^1.1.18",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "gqty": "^3.4.1",
     "lucide-react": "^0.474.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
