add @gqty/react and gqty as dependencies, and @tailwindcss/postcss as a devDependency in package.json

--- a/examples/pages/package.json
+++ b/examples/pages/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@getcronit/pylon": "workspace:^",
+    "@gqty/react": "^3.1.0",
     "@radix-ui/react-slot": "^1.1.2",
     "bun-types": "^1.1.18",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "gqty": "3.4.0-canary-20250207102900.644ad9fdeafa6318516627577b1d4d754d5c5a98",
     "lucide-react": "^0.474.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -23,6 +25,7 @@
   },
   "devDependencies": {
     "@getcronit/pylon-dev": "workspace:^",
+    "@tailwindcss/postcss": "^4.0.6",
     "@types/react": "^19.0.8"
   },
   "repository": {
