fix: update imports and module resolution for improved organization and compatibility

--- a/examples/pages/tsconfig.json
+++ b/examples/pages/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "@getcronit/pylon/tsconfig.pylon.json",
   "compilerOptions": {
+    "moduleResolution": "bundler",
     // add Bun type definitions
     "types": ["bun-types"],
     "baseUrl": ".",
