--- a/packages/pylon/package.json
+++ b/packages/pylon/package.json
@@ -12,7 +12,8 @@
     "./pages": {
       "import": "./dist/pages/index.js",
       "types": "./dist/pages/index.d.ts"
-    }
+    },
+    "./tsconfig.pylon.json": "./tsconfig.pylon.json"
   },
   "scripts": {
     "build": "rimraf ./dist && pnpm run build:server && pnpm run build:pages",
