--- a/packages/create-pylon/package.json
+++ b/packages/create-pylon/package.json
@@ -20,12 +20,11 @@
   },
   "homepage": "https://pylon.cronit.io",
   "dependencies": {
-    "@getcronit/pylon-telemetry": "workspace:^",
-    "@inquirer/prompts": "^5.4.0",
     "chalk": "^5.3.0",
     "commander": "^12.1.0",
     "consola": "^3.2.3",
-    "hono": "^4"
+    "package-manager-detector": "^0.2.9",
+    "tinyexec": "^0.3.2"
   },
   "engines": {
     "node": ">=18.0.0"
