--- a/packages/pylon/package.json
+++ b/packages/pylon/package.json
@@ -37,6 +37,7 @@
     "@envelop/core": "^5.0.3",
     "@getcronit/pylon-telemetry": "workspace:^",
     "@gqty/react": "^3.1.0",
+    "@graphql-yoga/plugin-disable-introspection": "^2.13.0",
     "@hono/sentry": "^1.2.0",
     "@sentry/bun": "^8.17.0",
     "@sentry/node": "^8.54.0",
