--- a/packages/pylon/tsconfig.json
+++ b/packages/pylon/tsconfig.json
@@ -1,27 +1,31 @@
 {
-    "compilerOptions": {
-      // add Bun type definitions
-  
-      // enable latest features
-      "lib": ["esnext"],
-      "module": "esnext",
-      "target": "esnext",
-  
-      "moduleResolution": "node", // support `import` from `node_modules`
-      "noImplicitAny": false,
-      "noImplicitThis": false,
-  
-      "jsx": "react-jsx", // support JSX
-      "allowJs": true, // allow importing `.js` from `.ts`
-      "esModuleInterop": true, // allow default imports for CommonJS modules
-  
-      // best practices
-      "strict": true,
-      "forceConsistentCasingInFileNames": true,
-      "skipLibCheck": true,
-      "experimentalDecorators": true,
-    },
-    "include": ["src/**/*"],
-    "exclude": ["node_modules/**/*", "**/*.test.ts", "**/*.test.tsx", "**/__tests__/**/*"]
-  }
-  
+  "compilerOptions": {
+    // add Bun type definitions
+
+    // enable latest features
+    "lib": ["DOM", "DOM.Iterable", "ES2022"],
+    "target": "ES2022",
+    "module": "ES2022",
+
+    "moduleResolution": "node", // support `import` from `node_modules`
+    "noImplicitAny": false,
+    "noImplicitThis": false,
+
+    "jsx": "react-jsx", // support JSX
+    "allowJs": true, // allow importing `.js` from `.ts`
+    "esModuleInterop": true, // allow default imports for CommonJS modules
+
+    // best practices
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "skipLibCheck": true,
+    "experimentalDecorators": true
+  },
+  "include": ["src/**/*"],
+  "exclude": [
+    "node_modules/**/*",
+    "**/*.test.ts",
+    "**/*.test.tsx",
+    "**/__tests__/**/*"
+  ]
+}
