--- a/packages/pylon/package.json
+++ b/packages/pylon/package.json
@@ -61,6 +61,7 @@
   },
   "devDependencies": {
     "@sentry/types": "^8.54.0",
+    "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.4"
   },
   "peerDependencies": {
