--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "ci:release": "changeset publish",
     "ci:version": "changeset version && pnpm i --no-frozen-lockfile --lockfile-only --ignore-scripts",
     "clean": "pnpm -r --filter \"./packages/*\" exec -- rimraf dist",
-    "build": "pnpm -r --filter \"./packages/*\" run build"
+    "build": "pnpm -r --workspace-concurrency=1 --filter \"./packages/*\" run build"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.0",
