move pylon-pages back to pylon

--- a/packages/pylon/components.json
+++ b/packages/pylon/components.json
@@ -5,7 +5,7 @@
   "tsx": true,
   "tailwind": {
     "config": "",
-    "css": "src/browser/globals.css",
+    "css": "./src/globals.css",
     "baseColor": "neutral",
     "cssVariables": true,
     "prefix": ""
