--- a/packages/pylon/package.json
+++ b/packages/pylon/package.json
@@ -56,6 +56,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.474.0",
     "openid-client": "^6.1.7",
+    "postcss-load-config": "^6.0.1",
     "react-router": "^7.1.5",
     "sharp": "^0.33.5",
     "tailwind-merge": "^3.0.1",
@@ -71,8 +72,7 @@
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.4",
     "tailwindcss": "^4.0.4",
-    "tailwindcss-animate": "^1.0.7",
-    "postcss-load-config": "^6.0.1"
+    "tailwindcss-animate": "^1.0.7"
   },
   "peerDependencies": {
     "@tailwindcss/postcss": "^4.0.4",
