--- a/packages/pylon/tsconfig.json
+++ b/packages/pylon/tsconfig.json
@@ -21,11 +21,12 @@
     "skipLibCheck": true,
     "experimentalDecorators": true,
     "baseUrl": "./src",
+    "outDir": "./dist",
     "paths": {
       "@/*": ["./*"]
     }
   },
-  "include": ["src/**/*"],
+  "include": ["src"],
   "exclude": [
     "node_modules/**/*",
     "**/*.test.ts",
