--- a/packages/pylon/package.json
+++ b/packages/pylon/package.json
@@ -55,6 +55,7 @@
     "hono": "^4.0.8",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.474.0",
+    "mime": "^4.0.6",
     "openid-client": "^6.1.7",
     "postcss-load-config": "^6.0.1",
     "react-router": "^7.1.5",
