--- a/packages/create-pylon/package.json
+++ b/packages/create-pylon/package.json
@@ -22,8 +22,10 @@
   "dependencies": {
     "chalk": "^5.3.0",
     "commander": "^12.1.0",
+    "conf": "^13.1.0",
     "consola": "^3.2.3",
     "package-manager-detector": "^0.2.9",
+    "posthog-node": "^4.10.1",
     "tinyexec": "^0.3.2"
   },
   "engines": {
