fix(telemetry): fix non-functioning telemetry disable flag and add tests
- Fix critical bug in telemetry disabled flag condition:
  `!env.PYLON_TELEMETRY_DISABLED === '1'` was always evaluating to false due to
  operator precedence issues and type mismatch (boolean !== string)
- Replace with `!!env.PYLON_TELEMETRY_DISABLED` to properly detect any truthy value
- This ensures telemetry can actually be disabled as documented
- Add comprehensive unit tests to verify correct behavior with various flag values
- Add tests for debug mode and different event types
- Add Vitest configuration and test scripts to package.json

pnpm-lock.yaml changes excluded due to large scope of changes

--- a/packages/pylon-telemetry/package.json
+++ b/packages/pylon-telemetry/package.json
@@ -7,7 +7,9 @@
   "description": "Telemetry for Pylon",
   "scripts": {
     "build": "rimraf ./dist && esbuild ./src/index.ts --bundle --platform=node --target=node18 --format=esm --minify --outdir=./dist --sourcemap=linked --packages=external && pnpm run build:declarations",
-    "build:declarations": "tsc --declaration --emitDeclarationOnly --outDir ./dist"
+    "build:declarations": "tsc --declaration --emitDeclarationOnly --outDir ./dist",
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "files": [
     "dist"
@@ -28,5 +30,8 @@
   },
   "publishConfig": {
     "access": "public"
+  },
+  "devDependencies": {
+    "vitest": "^3.1.3"
   }
 }
