--- a/packages/pylon/package.json
+++ b/packages/pylon/package.json
@@ -43,6 +43,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@sentry/bun": "^8.17.0",
     "@sentry/node": "^8.54.0",
+    "@sentry/react": "^10.5.0",
     "chokidar": "^4.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
