--- a/packages/pylon/package.json
+++ b/packages/pylon/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://pylon.cronit.io",
   "dependencies": {
     "@envelop/core": "^5.0.3",
+    "@envelop/disable-introspection": "^8.0.0",
     "@getcronit/pylon-telemetry": "workspace:^",
     "@hono/sentry": "^1.2.0",
     "@sentry/bun": "^8.17.0",
